--- a/src/app/classes/classes.page.html
+++ b/src/app/classes/classes.page.html
@@ -5,9 +5,46 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">classes</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-label class="top-label">Classes</ion-label>
+  <div class="all">
+    <ion-label class="title">Select Date</ion-label>
+    <ion-card>
+      <ion-card-content>
+        <ion-datetime></ion-datetime>
+      </ion-card-content>
+    </ion-card>
+    
+    <ion-card>
+      <ion-card-content>
+       
+          <button class="btn" type="button">
+            <strong>View Attendance</strong>
+            <div id="container-stars">
+              <div id="stars"></div>
+            </div>
+          
+            <div id="glow">
+              <div class="circle"></div>
+              <div class="circle"></div>
+            </div>
+          </button> <br>
+        
+        
+          <button class="btn" type="button">
+            <strong>Generate QR Code</strong>
+            <div id="container-stars">
+              <div id="stars"></div>
+            </div> 
+          
+            <div id="glow">
+              <div class="circle"></div>
+              <div class="circle"></div>
+            </div>
+          </button>
+          
+        
+        
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
