--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     gap: 10px;
     max-width: 350px;
-    background-color: #D9D9D9;
+    background-color: #A36361;
     padding: 20px;
     border-radius: 20px;
     position: absolute;
@@ -47,7 +47,7 @@
   }
   
   .message, .signin {
-    color: rgba(0, 0, 0, 0.822);
+    color: rgba(255, 255, 255, 0.822);
     font-size: 14px;
   }
   
